integrated dahboard with home

--- a/projects/site/src/app/about/about.component.html
+++ b/projects/site/src/app/about/about.component.html
@@ -1,3 +1,6 @@
+<!-- Navigation -->
+<app-header></app-header>
+
 <section class="page-section bg-dark" id="about">
     <div class="container mt-5 text-center">
         <div class="row">
@@ -87,3 +90,6 @@
         </div>
     </div>
 </section>
+
+<!-- Footer -->
+<app-footer></app-footer>
