--- a/projects/site/src/app/home/home.component.html
+++ b/projects/site/src/app/home/home.component.html
@@ -1,3 +1,6 @@
+<!-- Navigation -->
+<app-header></app-header>
+
 <!-- Masthead -->
 <app-masterhead></app-masterhead>
 
@@ -16,3 +19,6 @@
 
 <!-- Contact Section -->
 <app-contact id="contact"></app-contact>
+
+<!-- Footer -->
+<app-footer></app-footer>
