--- a/projects/site/src/app/header/header.component.html
+++ b/projects/site/src/app/header/header.component.html
@@ -1,10 +1,10 @@
-<nav style="background-color: #070713;" class="navbar navbar-expand-lg navbar-light fixed-top py-3 navbar-custom" id="mainNav">
+<nav *ngIf="isWebsite" style="background-color: #070713;" class="navbar navbar-expand-lg navbar-light fixed-top py-3 navbar-custom" id="mainNav">
     <div class="container">
         <a routerLink="/home" routerLinkActive="active" class="navbar-brand js-scroll-trigger" href="#page-top">
             <img class="img-fluid img-logo" src="../../assets/Moja-01logo.png" alt="">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="fa fa-bars text-muted" style="font-size: 20px;"></span>
       </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto mr-auto my-2 my-lg-0">
@@ -22,7 +22,7 @@
                 </li>
             </ul>
         </div>
-        <div class="header-buttons">
+        <div class="header-buttons d-xl-block d-lg-block d-none">
             <a routerLink="/login" class="btn btn-sm btn-outline-custom">Login</a>
             <a routerLink="/signup" class="btn btn-sm btn-custom">Sign up</a>
         </div>
