--- a/projects/site/src/app/register/register.component.html
+++ b/projects/site/src/app/register/register.component.html
@@ -1,3 +1,6 @@
+<!-- Navigation -->
+<app-header></app-header>
+
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-lg-4">
@@ -233,3 +236,6 @@
         </div>
     </div>
 </div>
+
+<!-- Footer -->
+<app-footer></app-footer>
