--- a/projects/site/src/app/dashboard/transations/transations.component.html
+++ b/projects/site/src/app/dashboard/transations/transations.component.html
@@ -1,1 +1,39 @@
-<p>transations works!</p>
+<div class="container-fluid">
+    <div class="card">
+        <div class="card-title">
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <h4>Transactions</h4>
+                </div>
+                <div class="col-md-8 col-custom text-white">
+                    <div class="main">
+                        <div class="input-group input-div">
+                            <input type="text" class="form-control" placeholder="Search transactions">
+                            <div class="input-group-append">
+                                <button class="btn btn-secondary" type="button"><i class="fa fa-search"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="card-body">
+            <table class="table table-de mb-0">
+                <thead>
+                    <tr class="tr-custom">
+                        <th>Date</th>
+                        <th>Amount</th>
+                        <th>Type</th>
+                        <th>Entity</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</div>
