--- a/projects/site/src/app/dashboard/account/account.component.html
+++ b/projects/site/src/app/dashboard/account/account.component.html
@@ -1,1 +1,43 @@
-<p>account works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-title text-center">
+                    <h4>Balance</h4>
+                </div>
+                <div class="card-body">
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-title text-center">
+                    <h4>Card details</h4>
+                </div>
+                <div class="card-body text-left">
+                    <div class="row">
+                        <div class="col-md-6">Status</div>
+                        <div class="col-md-6">
+                            Active <i class="fa fa-circle text-success"></i>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">Billing plan</div>
+                        <div class="col-md-6">UGX800 per week</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">Purchasing date</div>
+                        <div class="col-md-6">13/03/2020</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">Expiry date</div>
+                        <div class="col-md-6">13/04/2020</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <app-transations></app-transations>
+
+</div>
