--- a/projects/site/src/app/dashboard/employees/employees.component.css
+++ b/projects/site/src/app/dashboard/employees/employees.component.css
@@ -10,6 +10,7 @@
 
 .card-title {
     border-bottom: 1px solid rgba(246, 147, 28, .125);
+    text-align: center;
 }
 
 .card-title h4 {
@@ -46,4 +47,29 @@ td {
 
 .fa-circle {
     font-size: 6px;
+}
+
+.form-control {
+    background-color: transparent;
+    border: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-bottom: 1px solid #f6931c;
+    border-radius: 0px;
+    font-size: 12px;
+    margin: 0px;
+    color: white;
+}
+
+.divider {
+    border-bottom: 1px solid gray;
+}
+
+.sep {
+    margin-top: -15px;
+}
+
+.seperator {
+    background-color: #0b0c21;
+    padding: 5px;
 }
