--- a/projects/site/src/app/header/header.component.html
+++ b/projects/site/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="isWebsite" style="background-color: #070713;" class="navbar navbar-expand-lg navbar-light fixed-top py-3 navbar-custom" id="mainNav">
+<nav *ngIf="isWebsite" style="background-color: #070713 !important;" class="navbar navbar-expand-lg navbar-light fixed-top py-3 navbar-custom" id="mainNav">
     <div class="container">
         <a routerLink="/home" routerLinkActive="active" class="navbar-brand js-scroll-trigger" href="#page-top">
             <img class="img-fluid img-logo" src="../../assets/Moja-01logo.png" alt="">
