--- a/projects/site/src/app/page404/page404.component.html
+++ b/projects/site/src/app/page404/page404.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container-fluid">
 
     <!-- 404 Error Text -->
@@ -9,3 +10,4 @@
     </div>
 
 </div>
+<app-footer></app-footer>
