--- a/projects/site/src/app/dashboard/cards/cards.component.html
+++ b/projects/site/src/app/dashboard/cards/cards.component.html
@@ -20,22 +20,22 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-title text-center">
-                    <h4>Destroy card</h4>
+                    <h4>Revoke cards</h4>
                 </div>
                 <div class="card-body">
-                    <div class="text-center text-muted text-small pb-3">Select card to destroy</div>
+                    <div class="text-center text-muted text-small pb-3">Select card to revoke</div>
                     <ul>
                         <li>
                             <label for="cancel1">
-                <input type="checkbox" name="cancel1" id="">
-                4200 3972 5692 1323
-              </label>
+                  <input type="checkbox" name="cancel1" id="">
+                  4200 3972 5692 1323
+                </label>
                         </li>
                         <li>
                             <label for="cacel2">
-                    <input type="checkbox" name="cance2" id="">
-                    4178 3972 5542 6748
-                  </label>
+                      <input type="checkbox" name="cance2" id="">
+                      4178 3972 5542 6748
+                    </label>
                         </li>
                     </ul>
                     <div class="text-center">
@@ -45,6 +45,7 @@
             </div>
         </div>
     </div>
+    <app-transact></app-transact>
     <div class="row">
         <div class="col-md-12 card">
             <div class="card-title text-center">
@@ -85,5 +86,6 @@
             </div>
         </div>
     </div>
+
 
 </div>
