--- a/projects/site/src/app/dashboard/dashboard.component.html
+++ b/projects/site/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,12 @@
 <div class="wrapper ">
-    <app-sidebar></app-sidebar>
+    <app-sidebar (activatedLink)="getLink($event)"></app-sidebar>
     <div class="main-panel">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-custom" style="background-color: #0b0c21 !important;">
             <div class="container-fluid">
                 <div class="navbar-wrapper">
-                    <a class="navbar-brand text-white" routerLink="dashboard">Dashboard</a>
+                    <a class="navbar-brand breadcrumb-item text-white" routerLink="dashboard">Dashboard</a>
+                    <a class="breadcrumb-item active text-gray">{{ activatedSidebarLink }}</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="sr-only">Toggle navigation</span>
@@ -15,7 +16,7 @@
 
                     <ul class="navbar-nav my-lg-0">
                         <li class="nav-item text-white text-sm"> {{ full_name }} </li>&nbsp;&nbsp;&nbsp;
-                        <li class="nav-item" title="logout"><a routerLink="login"><i  class="fa fa-power-off fa-power-off-custom"></i></a></li>
+                        <li class="nav-item" title="logout"><a routerLink="../login"><i  class="fa fa-power-off fa-power-off-custom"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -23,7 +24,11 @@
         <!-- End Navbar -->
 
         <div class="content">
-            <router-outlet name="dashboard-outlet"></router-outlet>
+            <app-dashboard-home *ngIf="activatedSidebarLink === 'Dashboard'"></app-dashboard-home>
+            <app-cards *ngIf="activatedSidebarLink === 'Cards'"></app-cards>
+            <app-employees *ngIf="activatedSidebarLink === 'Employees'"></app-employees>
+            <app-account *ngIf="activatedSidebarLink === 'Account'"></app-account>
+            <app-settings *ngIf="activatedSidebarLink === 'Settings'"></app-settings>
         </div>
         <app-footer></app-footer>
     </div>
