--- a/projects/site/src/app/dashboard/sidebar/sidebar.component.html
+++ b/projects/site/src/app/dashboard/sidebar/sidebar.component.html
@@ -6,61 +6,68 @@
         </a>
     </div>
     <div class="sidebar-wrapper">
-        <ul id="sidebar-menu " class="side-menu">
-
+        <ul class="side-menu">
+            <li class="nav-devider"></li>
             <li style="margin-top: 10px;">
-                <a routerLink="/home" aria-expanded="false">
+                <a aria-expanded="false" (click)="dHome()">
                     <i class="fa fa-tachometer-alt" aria-hidden="true"></i>
                     <span class="hide-menu">Dashboard </span>
                 </a>
             </li>
             <li>
-                <a routerLink="/cards" aria-expanded="false">
+                <a aria-expanded="false" (click)="dCards()">
                     <i class="fa fa-credit-card"></i>
                     <span class="hide-menu">Manage Cards</span>
                 </a>
             </li>
+            <li *ngIf="companyDashboard">
+                <a aria-expanded="false" (click)="dEmployees()">
+                    <i class="fa fa-users"></i>
+                    <span class="hide-menu">Employees</span>
+                </a>
+            </li>
             <!--<li>
-            <a routerLink="/transact" aria-expanded="false">
-                <i class="fa fa-exchange-alt"></i>
-                <span class="hide-menu">Transact</span>
-            </a>
-        </li>-->
+          <a routerLink="/transact" aria-expanded="false">
+              <i class="fa fa-exchange-alt"></i>
+              <span class="hide-menu">Transact</span>
+          </a>
+      </li>-->
             <li>
-                <a routerLink="/account" aria-expanded="false">
+                <a aria-expanded="false" (click)="dAccount()">
                     <i class="fa fa-user"></i>
                     <span class="hide-menu">My Account</span>
                 </a>
             </li>
             <li>
-                <a routerLink="/settings" aria-expanded="false">
+                <a aria-expanded="false" (click)="dSettings()">
                     <i class="fa fa-cog"></i>
                     <span class="hide-menu">Settings </span>
                 </a>
             </li>
-            <!--
+            <li class="nav-devider mt-1"></li>
             <br>
-            <div class="container">
-                <li style="margin-top: 5px;" class="hide-menu">
-                    <h5>Download App</h5>
-                </li>
-            </div>
-            <li>
-                <a href="#" aria-expanded="false">
-                    <i class="fa fa-play"></i>
-                    <span class="hide-menu"><img class="img-fluid img-store-custom" src="../../assets/gp.svg" width="80%"></span>
-                </a>
+            <!--
+        <div class="container">
+            <li style="margin-top: 5px;" class="hide-menu">
+                <h5>Download App</h5>
             </li>
-            <li>
-                <a href="#" aria-expanded="false">
-                    <i class="fa fa-apple-alt"></i>
-                    <span class="hide-menu"><img class="img-fluid img-store-custom" src="../../assets/as.svg" width="80%"></span>
-                </a>
-            </li>
+        </div>
+        <li>
+            <a href="#" aria-expanded="false">
+                <i class="fa fa-play"></i>
+                <span class="hide-menu"><img class="img-fluid img-store-custom" src="../../assets/gp.svg" width="80%"></span>
+            </a>
+        </li>
+        <li>
+            <a href="#" aria-expanded="false">
+                <i class="fa fa-apple-alt"></i>
+                <span class="hide-menu"><img class="img-fluid img-store-custom" src="../../assets/as.svg" width="80%"></span>
+            </a>
+        </li>
 
-            <li style="margin-top: 50px;">
+        <li style="margin-top: 50px;">
 
-            </li> -->
+        </li>-->
         </ul>
     </div>
 </div>
