--- a/projects/site/src/app/dashboard/transact/transact.component.html
+++ b/projects/site/src/app/dashboard/transact/transact.component.html
@@ -1,39 +1,92 @@
-<div class="container-fluid">
-    <div class="card">
-        <div class="card-title">
-            <div class="row">
-                <div class="col-md-4 text-center">
-                    <h4>Transactions</h4>
-                </div>
-                <div class="col-md-8 col-custom text-white">
-                    <div class="main">
-                        <div class="input-group input-div">
-                            <input type="text" class="form-control" placeholder="Search transactions">
-                            <div class="input-group-append">
-                                <button class="btn btn-secondary" type="button"><i class="fa fa-search"></i></button>
-                            </div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-title text-center">
+                <h4>Top up</h4>
+            </div>
+            <div class="card-body">
+                <form action="#" method="post">
+                    <div class="text-center text-muted text-small pb-3">Select how to top up your Moja account</div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul>
+                                <li><a href="#">MTN Mobile Money</a></li>
+                                <li><a href="#">Airtel Money</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul>
+                                <li><a href="#">Interswitch</a></li>
+                                <li><a href="#">Direct Bank Deposit</a></li>
+                            </ul>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
-
         </div>
-        <div class="card-body">
-            <table class="table table-de mb-0">
-                <thead>
-                    <tr class="tr-custom">
-                        <th>Date</th>
-                        <th>Amount</th>
-                        <th>Type</th>
-                        <th>Entity</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-
-                </tbody>
-            </table>
+    </div>
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-title text-center">
+                <h4>Withdraw</h4>
+            </div>
+            <div class="card-body">
+                <div class="text-center text-muted text-small pb-3">Select where to send your money</div>
+                <ul>
+                    <li><a href="#">To Airtel Money</a></li>
+                    <li><a href="#">To MTN mobile Money</a></li>
+                    <li><a href="#">To Bank Account</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-title text-center">
+                <h4>Pay utiliies</h4>
+            </div>
+            <div class="card-body">
+                <form action="#" method="post">
+                    <div class="text-center text-muted text-small pb-3">Select utility to be paid</div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul>
+                                <li><a href="#">UMEME</a></li>
+                                <li><a href="#">URA</a></li>
+                                <li><a href="#">NWSC</a></li>
+                                <li><a href="#">Buy Airtime</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul>
+                                <li><a href="#">Buy Airtime</a></li>
+                                <li><a href="#">Pay TV</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-title text-center">
+                <h4>Transfer Money</h4>
+            </div>
+            <div class="card-body">
+                <form action="#">
+                    <div class="form-group">
+                        <input type="text" placeholder=" Reciever's Virtual Card number" name="card_number" class="form-control">
+                    </div>
+                    <div class="form-group text-center">
+                        <input type="text" placeholder="Amount" class="form-control">
+                        <button class="btn btn-outline-success">Transfer</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
