--- a/projects/site/src/app/register/register.component.html
+++ b/projects/site/src/app/register/register.component.html
@@ -23,7 +23,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="email" [class.is-invalid]="getEmail.invalid && getEmail.touched" class="form-control input-custom" placeholder="Email" name="email" formControlName="email">
+                            <input type="email" [class.is-invalid]="getEmail.invalid && getEmail.touched" class="form-control input-custom" placeholder="Email" [(ngModel)]="uEmail.email" name="email" formControlName="email">
                             <div class="text-danger" *ngIf="(getEmail.invalid && getEmail.touched) || getEmail.dirty">
                                 <small *ngIf="getEmail.errors?.required">Email address is required</small>
                                 <small *ngIf="getEmail.errors?.email">Please enter a valid email</small>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <br>
-                        <input type="submit" class="btn btn-block btn-primary btn-flat" value="Register">
+                        <button [routerLink]="['/dashboard/']" class="btn btn-block btn-primary btn-flat">Register</button>
                         <div class="div-hr text-muted">
                             <span class="or-seperator">or</span>
                         </div>
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="email" [class.is-invalid]="companyEmail.invalid && companyEmail.touched" class="form-control input-custom" placeholder="Email" name="email" formControlName="getCompanyEmail">
+                            <input type="email" [class.is-invalid]="companyEmail.invalid && companyEmail.touched" class="form-control input-custom" [(ngModel)]="cEmail.email" placeholder="Email" name="email" formControlName="getCompanyEmail">
                             <div class="text-danger" *ngIf="(companyEmail.invalid && companyEmail.touched) || companyEmail.dirty">
                                 <small *ngIf="companyEmail.errors?.required">Email address is required</small>
                                 <small *ngIf="companyEmail.errors?.email">Please enter a valid email</small>
@@ -220,7 +220,7 @@
                             </div>
                         </div>
                         <br>
-                        <input type="submit" class="btn btn-block btn-primary btn-flat" value="Register">
+                        <button [routerLink]="['/dashboard']" class="btn btn-block btn-primary btn-flat">Register</button>
                         <div class="div-hr text-muted">
                             <span class="or-seperator">or</span>
                         </div>
