--- a/projects/site/src/app/dashboard/dashboard.component.html
+++ b/projects/site/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
         <nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-custom" style="background-color: #0b0c21 !important;">
             <div class="container-fluid">
                 <div class="navbar-wrapper">
-                    <a class="navbar-brand breadcrumb-item text-white" routerLink="dashboard">Dashboard</a>
+                    <a class="navbar-brand breadcrumb-item text-white" (click)="setHome()">Dashboard</a>
                     <a class="breadcrumb-item active text-gray">{{ activatedSidebarLink }}</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
